###################################################################################
#                                                                                 #
# NAME: meson.build                                                               #
#                                                                                 #
# AUTHOR: Mike Karlesky, Mark VanderVoord, Greg Williams.                         #
# WRITTEN BY: Michael Brockus.                                                    #
#                                                                                 #
# License: MIT                                                                    #
#                                                                                 #
###################################################################################

hunt_dir = include_directories('.')

hunt_lib = static_library(meson.project_name(),
    sources: ['hunt.c'],
    include_directories: hunt_dir)
